# gst-plugin-viperfx

./: CMakeLists.txt  README.md  autobuild.sh  dbus-documentation.md  demo.sh  instructions.txt
src/: autoreload.h  dbus-interface.c  dbus-interface.h  gstviperfx.c  gstviperfx.h  viperfx_so.c  viperfx_so.h
